; ModuleID = '/home/carl/AnghaBench/jq/src/extr_builtin.c_tm2jv.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_builtin.c_tm2jv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i64, i64, i64, i64, i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tm*)* @tm2jv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tm2jv(%struct.tm* %0) #0 {
  %2 = alloca %struct.tm*, align 8
  store %struct.tm* %0, %struct.tm** %2, align 8
  %3 = load %struct.tm*, %struct.tm** %2, align 8
  %4 = getelementptr inbounds %struct.tm, %struct.tm* %3, i32 0, i32 7
  %5 = load i64, i64* %4, align 8
  %6 = add nsw i64 %5, 1900
  %7 = call i32 @jv_number(i64 %6)
  %8 = load %struct.tm*, %struct.tm** %2, align 8
  %9 = getelementptr inbounds %struct.tm, %struct.tm* %8, i32 0, i32 6
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @jv_number(i64 %10)
  %12 = load %struct.tm*, %struct.tm** %2, align 8
  %13 = getelementptr inbounds %struct.tm, %struct.tm* %12, i32 0, i32 5
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @jv_number(i64 %14)
  %16 = load %struct.tm*, %struct.tm** %2, align 8
  %17 = getelementptr inbounds %struct.tm, %struct.tm* %16, i32 0, i32 4
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @jv_number(i64 %18)
  %20 = load %struct.tm*, %struct.tm** %2, align 8
  %21 = getelementptr inbounds %struct.tm, %struct.tm* %20, i32 0, i32 3
  %22 = load i64, i64* %21, align 8
  %23 = call i32 @jv_number(i64 %22)
  %24 = load %struct.tm*, %struct.tm** %2, align 8
  %25 = getelementptr inbounds %struct.tm, %struct.tm* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = call i32 @jv_number(i64 %26)
  %28 = load %struct.tm*, %struct.tm** %2, align 8
  %29 = getelementptr inbounds %struct.tm, %struct.tm* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @jv_number(i64 %30)
  %32 = load %struct.tm*, %struct.tm** %2, align 8
  %33 = getelementptr inbounds %struct.tm, %struct.tm* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = call i32 @jv_number(i64 %34)
  %36 = call i32 @JV_ARRAY(i32 %7, i32 %11, i32 %15, i32 %19, i32 %23, i32 %27, i32 %31, i32 %35)
  ret i32 %36
}

declare dso_local i32 @JV_ARRAY(i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @jv_number(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
